--- a/vercel.json
+++ b/vercel.json
@@ -9,13 +9,5 @@
       "maxDuration": 30
     }
   },
-  "regions": ["iad1"],
-  "env": {
-    "DATABASE_URL": "@database_url",
-    "PUBLIC_APP_URL": "@public_app_url",
-    "SMTP_HOST": "@smtp_host",
-    "SMTP_PORT": "@smtp_port", 
-    "SMTP_USER": "@smtp_user",
-    "SMTP_PASS": "@smtp_pass"
-  }
+  "regions": ["iad1"]
 }
