--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-  "config": {
-    "debug": false,
-    "timeout": 1329,
-    "retries": 5
+  "metadata": {
+    "build": 923,
+    "timestamp": 1763132056,
+    "environment": "production"
   }
 }
